--- a/.gitignore
+++ b/.gitignore
@@ -1,154 +1,90 @@
-# .gitignore file created for free with Tower (https://www.git-tower.com/)
-# For suggestions or improvements please contact us using support@git-tower.com
-# Generated on 2025-11-24
-# Includes: java, eclipse, maven
-
-### Universal ###
-# Common files that should be ignored in all projects
-
-# Logs
-*.log
-# Temporary files
-*.tmp
-*~
-
-*.bak
-# Environment files (containing secrets, API keys, credentials)
-.env
-*.env
-.env.*
-
-# Local configuration that shouldn't be shared
-*.local
-
-### Java ###
-# Java compiled files, build directories, and IDE files
-
-*.class
-*.log
-*.ctxt
-.mtj.tmp/
-*.jar
-
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-
-*.rar
-hs_err_pid*
-replay_pid*
-.classpath
-.project
-
-.settings/
-target/
-bin/
-build/
-.settings/
-
-*.launch
-.apt_generated/
-.factorypath
-.springBeans
-
-### Eclipse ###
-# Eclipse IDE specific files and settings
-
-# Eclipse
-.metadata
-bin/
-tmp/
-*.tmp
-
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-
-.loadpath
-.recommenders
-.project
-.externalToolBuilders/
-*.launch
-
-.classpath
-.factorypath
-.buildpath
-.target
-.tern-project
-
-.springBeans
-.recommenders/
-.apt_generated/
-.apt_generated_test/
-.cache-main
-
-.scala_dependencies
-.worksheet
-.autotools
-.cproject
-.sts4-cache/
-
-.pydevproject
-.texlipse
-*_flymake.*
-
-### Maven ###
-# Maven build tool files and directories
-
+# -------------------------
 # Maven
+# -------------------------
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+!.mvn/wrapper/maven-wrapper.jar
 .mvn/timing.properties
+dependency-reduced-pom.xml
 
-.mvn/wrapper/maven-wrapper.jar
-.mvn/wrapper/maven-wrapper.properties
-mvnw
-mvnw.cmd
-.m2/
+# -------------------------
+# Logs
+# -------------------------
+logs/
+*.log
 
-*.war
-*.ear
-*.jar
-*.nar
+# -------------------------
+# Reports
+# -------------------------
+reports/
+test-output/
+surefire-reports/
+allure-results/
+allure-report/
+extent-report/
+cucumber-reports/
+
+# -------------------------
+# IntelliJ IDEA
+# -------------------------
+.idea/
+*.iml
+out/
+
+# -------------------------
+# Eclipse
+# -------------------------
 .project
-
 .classpath
 .settings/
-maven-status/
-maven-archiver/
-generated-sources/
 
-generated-test-sources/
-maven-compiler-plugin/
-maven-metadata.xml
-maven-metadata-local.xml
-.maven-classpath
+# -------------------------
+# VS Code
+# -------------------------
+.vscode/
 
-*.versionsBackup
-maven-eclipse.xml
+# -------------------------
+# OS-specific
+# -------------------------
+.DS_Store
+Thumbs.db
 
-### Maven ###
-# Maven package manager repository files
+# -------------------------
+# Java-specific
+# -------------------------
+*.class
+*.jar
+*.war
+*.ear
 
-# Maven
-.m2/
-repository/
-.mvn/
-maven/
+# -------------------------
+# Environment / Credentials
+# -------------------------
+.env
+*.properties.local
+*.secret
+*.key
 
-.maven/
-maven-repository/
-.maven-cache/
-maven-metadata-local.xml
-.maven_repos/
+# -------------------------
+# Selenium / Browser Drivers
+# -------------------------
+chromedriver
+chromedriver.exe
+geckodriver
+geckodriver.exe
+msedgedriver
+msedgedriver.exe
+
+# -------------------------
+# Node / WebdriverManager cache (if used)
+# -------------------------
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# -------------------------
+# Temporary Files
+# -------------------------
+tmp/
+temp/
+*.tmp
+
